--- a/translations/texts/items/active/weapons/melee/axe/poweraxe.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/axe/poweraxe.activeitem.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "嘿嘿，我得好好地对着你的脸来上这么一下！",
-      "Eng": "Smile for the birdy!"
+      "Eng": "Smile for the birdy!\n^cyan;Inflicts Electrified and Bouncy^reset;"
     }
   },
   {
