--- a/translations/texts/items/active/weapons/melee/broadsword/irradiumsword.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/broadsword/irradiumsword.activeitem.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "由镭锻造而成。",
-      "Eng": "Forged from irradium."
+      "Eng": "Forged from irradium.\n^cyan;Inflicts Rad-Burn^reset;"
     }
   },
   {
