--- a/translations/texts/items/active/weapons/melee/longsword/densiniumlongsword.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/longsword/densiniumlongsword.activeitem.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "由残酷的致密金属制成。顶级的杀害乐趣。",
-      "Eng": "Brutally dense metal. Super murdery fun."
+      "Eng": "Brutally dense metal. Super murdery fun.\n^cyan;Inflicts Electrified^reset;"
     }
   },
   {
