--- a/translations/texts/items/active/weapons/melee/broadsword/densiniumsword/densiniumsword.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/broadsword/densiniumsword/densiniumsword.activeitem.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "一把无坚不摧的宽剑。",
-      "Eng": "A powerful, super-dense blade."
+      "Eng": "A powerful, super-dense blade.\n^cyan;Inflicts Electrified^reset;"
     }
   },
   {
