--- a/translations/texts/items/active/weapons/melee/dagger/irradiumdagger.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/dagger/irradiumdagger.activeitem.json
@@ -19,8 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "快速而致命的武器。",
-      "Eng": "Swift and deadly."
+      "Eng": "Swift and deadly.\n^cyan;Inflicts Rad-Burn^reset;"
     }
   }
 ]
