--- a/translations/texts/items/active/weapons/melee/greataxe/irradiumgreataxe.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/greataxe/irradiumgreataxe.activeitem.json
@@ -19,8 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "劈来劈去一点也不好玩。\n^cyan;眩晕几率+12^reset;%",
-      "Eng": "Not at all fun to be cleaved by.\n^cyan;+12% Stun chance^reset;"
+      "Eng": "Not at all fun to be cleaved by.\n^cyan;Inflicts Rad-Burn^reset;\n^cyan;+12% Stun chance^reset;"
     }
   }
 ]
