--- a/translations/texts/items/active/weapons/melee/hammer/irradiumhammer.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/hammer/irradiumhammer.activeitem.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "使用碳与镭锻造而成。相当危险的武器。",
-      "Eng": "Forged from carbon and irradium. Quite dangerous."
+      "Eng": "Forged from carbon and irradium. Quite dangerous.\n^cyan;Inflicts Rad-Burn^reset;"
     }
   },
   {
