--- a/translations/texts/items/active/weapons/melee/katana/irradiumkatana.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/katana/irradiumkatana.activeitem.json
@@ -19,8 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "放射性给这把武器带来了无比刺激的乐趣。双手握持。\n^yellow;5连斩^reset;",
-      "Eng": "Radioactive stabby fun. Two-handed.\n^yellow;5 hit combo^reset;"
+      "Eng": "Radioactive stabby fun. Two-handed.\n^cyan;Inflicts Rad-Burn^reset;\n^yellow;5 hit combo^reset;"
     }
   }
 ]
