--- a/translations/texts/items/active/weapons/melee/longsword/irradiumlongsword.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/longsword/irradiumlongsword.activeitem.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "把镭的边缘磨快了之后会相当的...锋利。",
-      "Eng": "A honed irradium edge makes this rather...reactive."
+      "Eng": "A honed irradium edge makes this rather...reactive.\n^cyan;Inflicts Rad-Burn^reset;"
     }
   },
   {
