--- a/translations/texts/items/active/weapons/melee/mace/densiniummace.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/mace/densiniummace.activeitem.json
@@ -19,8 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "用于精彩谋杀的超级武器。由Gezbo设计。",
-      "Eng": "Superior weapon for superior murder. Design by Gezbo."
+      "Eng": "Superior weapon for superior murder. Design by Gezbo.\n^cyan;Inflicts Electrified^reset;"
     }
   }
 ]
