--- a/translations/texts/items/active/weapons/melee/quarterstaff/irradiumquarterstaff.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/quarterstaff/irradiumquarterstaff.activeitem.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "一把设计成了断裂的骨头的带有辐射的长棍。",
-      "Eng": "A radioactive staff designed to fracture bone."
+      "Eng": "A radioactive staff designed to fracture bone.\n^cyan;Inflicts Rad-Burn^reset;"
     }
   },
   {
