--- a/translations/texts/items/active/weapons/melee/scythe/densiniumscythe.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/scythe/densiniumscythe.activeitem.json
@@ -19,8 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "这，就是最致命的镰刀。",
-      "Eng": "Perhaps the deadliest curved blade around."
+      "Eng": "Perhaps the deadliest curved blade around.\n^cyan;Inflicts Electrified^reset;"
     }
   }
 ]
