--- a/translations/texts/items/active/weapons/melee/scythe/irradiumscythe.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/scythe/irradiumscythe.activeitem.json
@@ -19,8 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "不知道适合农业还是谋杀。无论哪种方式都很有趣吧。",
-      "Eng": "Unsure if meant for farming or murder. Fun either way."
+      "Eng": "Unsure if meant for farming or murder. Fun either way.\n^cyan;Inflicts Rad-Burn^reset;"
     }
   }
 ]
