--- a/translations/texts/items/active/weapons/melee/shortspear/densiniumshortspear.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/shortspear/densiniumshortspear.activeitem.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "致命的边缘，充满了紫色威胁。\n^cyan;狩猎武器^reset;",
-      "Eng": "Deadly edge, full of purple menace.\n^cyan;Hunting weapon^reset;"
+      "Eng": "Deadly edge, full of purple menace.\n^cyan;Inflicts Electrified^reset;\n^cyan;Hunting weapon^reset;"
     }
   },
   {
