--- a/translations/texts/items/active/weapons/melee/shortspear/irradiumshortspear.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/shortspear/irradiumshortspear.activeitem.json
@@ -19,8 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "高温辐射和严重的放射性。包死。\n^cyan;狩猎武器^reset;",
-      "Eng": "Light and brutally radioactive. Guaranteed to cause death.\n^cyan;Hunting weapon^reset;"
+      "Eng": "Light and brutally radioactive. Guaranteed to cause death.\n^cyan;Inflicts Rad-Burn^reset;\n^cyan;Hunting weapon^reset;"
     }
   }
 ]
