--- a/translations/texts/items/active/weapons/melee/shortspear/tritaniumshortspear.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/shortspear/tritaniumshortspear.activeitem.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "惊人的穿刺武器。\n^cyan;狩猎武器^reset;",
-      "Eng": "A marvelously stabby device.\n^cyan;Hunting weapon^reset;"
+      "Eng": "A marvelously stabby device.\n^cyan;Inflicts Electrified^reset;\n^cyan;Hunting weapon^reset;"
     }
   },
   {
