--- a/translations/texts/items/active/weapons/melee/shortsword/densiniumshortsword.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/shortsword/densiniumshortsword.activeitem.json
@@ -19,8 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "高超的工艺。几乎牢不可破。",
-      "Eng": "Superior craftsmanship. Nearly unbreakable."
+      "Eng": "Superior craftsmanship. Nearly unbreakable.\n^cyan;Inflicts Electrified^reset;"
     }
   }
 ]
