--- a/translations/texts/items/active/weapons/melee/shortsword/irradiumblade.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/shortsword/irradiumblade.activeitem.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "为征服而铸。",
-      "Eng": "Built for conquest."
+      "Eng": "Built for conquest.\n^cyan;Inflicts Rad-Burn^reset;"
     }
   },
   {
