--- a/translations/texts/items/active/weapons/melee/spear/tritaniumspear.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/spear/tritaniumspear.activeitem.json
@@ -19,8 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "你应该把这个刺向敌人，科学万岁！\n^cyan;狩猎武器^reset;",
-      "Eng": "You should shove this in a foe. For science!\n^cyan;Hunting weapon^reset;"
+      "Eng": "You should shove this in a foe. For science!\n^cyan;Inflicts Electrified^reset;\n^cyan;Hunting weapon^reset;"
     }
   }
 ]
