--- a/translations/translatedlabels.json
+++ b/translations/translatedlabels.json
@@ -3908,7 +3908,7 @@
               "fucoralcleaver.activeitem.json": 2,
               "fucultaxe.activeitem.json": 2,
               "fucultistaxe.activeitem.json": 2,
-              "irradiumaxe.activeitem.json": 2,
+              "irradiumaxe.activeitem.json": 1,
               "isogenaxe.activeitem.json": 2,
               "lunariaxe.activeitem.json": 2,
               "moltenaxe.activeitem.json": 2,
@@ -3916,7 +3916,7 @@
               "panishment.activeitem.json": 2,
               "penumbriteaxe.activeitem.json": 2,
               "poptopclaw.activeitem.json": 1,
-              "poweraxe.activeitem.json": 2,
+              "poweraxe.activeitem.json": 1,
               "pyreiteaxe.activeitem.json": 2,
               "quietusaxe.activeitem.json": 2,
               "radienaxe.activeitem.json": 2,
@@ -3940,7 +3940,7 @@
                 "dbladelong.activeitem.json": 1
               },
               "densiniumsword": {
-                "densiniumsword.activeitem.json": 2
+                "densiniumsword.activeitem.json": 1
               },
               "effigiumbroadsword.activeitem.json": 1,
               "elderbroadsword.activeitem.json": 3,
@@ -3951,7 +3951,7 @@
               "fugoldenblade.activeitem.json": 2,
               "hellfireblade.activeitem.json": 2,
               "hylotlgreatscion.activeitem.json": 2,
-              "irradiumsword.activeitem.json": 2,
+              "irradiumsword.activeitem.json": 1,
               "isogenbroadsword.activeitem.json": 2,
               "lunaribroadsword.activeitem.json": 2,
               "metalliccleaver.activeitem.json": 1,
@@ -4006,7 +4006,7 @@
               "fubonepickaxe.activeitem.json": 2,
               "fucultistdagger.activeitem.json": 1,
               "fushadowdagger.activeitem.json": 2,
-              "irradiumdagger.activeitem.json": 2,
+              "irradiumdagger.activeitem.json": 1,
               "isogendagger.activeitem.json": 2,
               "lunaridagger.activeitem.json": 2,
               "nightardagger.activeitem.json": 5,
@@ -4028,7 +4028,7 @@
             "flail": {
               "flailancient.activeitem.json": 2,
               "flailcookie.activeitem.json": 2,
-              "flaildensinium.activeitem.json": 2,
+              "flaildensinium.activeitem.json": 1,
               "flaildurasteel.activeitem.json": 1,
               "flaileffigium.activeitem.json": 2,
               "flailiron.activeitem.json": 1,
@@ -4052,7 +4052,7 @@
               "furaregreataxe.activeitem.json": 1,
               "fuuncommongreataxe.activeitem.json": 1,
               "irongreataxe.activeitem.json": 2,
-              "irradiumgreataxe.activeitem.json": 2,
+              "irradiumgreataxe.activeitem.json": 1,
               "lunarigreataxe.activeitem.json": 2,
               "nightarwarblade.activeitem.json": 1,
               "penumbritegreataxe.activeitem.json": 2,
@@ -4084,7 +4084,7 @@
               "fuhoneyhammer.activeitem.json": 2,
               "fumegahoneyhammer.activeitem.json": 2,
               "fuquantumhammer.activeitem.json": 1,
-              "irradiumhammer.activeitem.json": 2,
+              "irradiumhammer.activeitem.json": 1,
               "isogenhammer.activeitem.json": 2,
               "kelpsteelhatchet.activeitem.json": 2,
               "meathammer": {
@@ -4114,13 +4114,13 @@
               "carbonkatana.activeitem.json": 2,
               "coralkatana.activeitem.json": 2,
               "cutekatana.activeitem.json": 2,
-              "densiniumkatana.activeitem.json": 2,
+              "densiniumkatana.activeitem.json": 1,
               "diamondkatana.activeitem.json": 2,
               "durasteelkatana.activeitem.json": 1,
               "fucultistkatana.activeitem.json": 2,
               "ironkatana.activeitem.json": 1,
               "ironkatana2.activeitem.json": 1,
-              "irradiumkatana.activeitem.json": 2,
+              "irradiumkatana.activeitem.json": 1,
               "isogenkatana.activeitem.json": 2,
               "lunarikatana.activeitem.json": 2,
               "penumbritekatana.activeitem.json": 2,
@@ -4148,7 +4148,7 @@
               "crystallineblade.activeitem.json": 2,
               "cutelongsword.activeitem.json": 2,
               "deadbeatlongsword.activeitem.json": 1,
-              "densiniumlongsword.activeitem.json": 2,
+              "densiniumlongsword.activeitem.json": 1,
               "effigiumlongsword.activeitem.json": 1,
               "fiendefeller.activeitem.json": 2,
               "fuambersword.activeitem.json": 2,
@@ -4156,7 +4156,7 @@
               "fucellsword.activeitem.json": 2,
               "fupetalsword.activeitem.json": 2,
               "ironlongsword.activeitem.json": 2,
-              "irradiumlongsword.activeitem.json": 2,
+              "irradiumlongsword.activeitem.json": 1,
               "kaicleaver.activeitem.json": 2,
               "klinokrov.activeitem.json": 2,
               "penumbritelongsword.activeitem.json": 2,
@@ -4186,7 +4186,7 @@
               "cutemace.activeitem.json": 2,
               "deadbeatmace.activeitem.json": 1,
               "densealloymace.activeitem.json": 2,
-              "densiniummace.activeitem.json": 2,
+              "densiniummace.activeitem.json": 1,
               "durasteelmace.activeitem.json": 2,
               "effigiummace.activeitem.json": 2,
               "eldermace.activeitem.json": 2,
@@ -4200,7 +4200,7 @@
               "hellfiremace.activeitem.json": 2,
               "honeymace.activeitem.json": 2,
               "ironmace.activeitem.json": 1,
-              "irradiummace.activeitem.json": 2,
+              "irradiummace.activeitem.json": 1,
               "isogenmace.activeitem.json": 2,
               "lunarimace.activeitem.json": 2,
               "obsidianmace.activeitem.json": 2,
@@ -4229,12 +4229,12 @@
               "curvestaff.activeitem.json": 2,
               "cutequarterstaff.activeitem.json": 2,
               "deadbeatquarterstaff.activeitem.json": 2,
-              "densiniumquarterstaff.activeitem.json": 2,
+              "densiniumquarterstaff.activeitem.json": 1,
               "diamondquarterstaff.activeitem.json": 2,
               "fucultistquarterstaff.activeitem.json": 2,
               "goldquarterstaff.activeitem.json": 2,
               "ironquarterstaff.activeitem.json": 1,
-              "irradiumquarterstaff.activeitem.json": 2,
+              "irradiumquarterstaff.activeitem.json": 1,
               "lunariquarterstaff.activeitem.json": 2,
               "penumbritestaff.activeitem.json": 2,
               "quietusquarterstaff.activeitem.json": 2,
@@ -4263,7 +4263,7 @@
               "goldrapier.activeitem.json": 2,
               "hellfirerapier.activeitem.json": 2,
               "ironrapier.activeitem.json": 2,
-              "irradiumrapier.activeitem.json": 2,
+              "irradiumrapier.activeitem.json": 1,
               "isogenrapier.activeitem.json": 2,
               "lunarirapier.activeitem.json": 2,
               "mineralrapier.activeitem.json": 2,
@@ -4281,14 +4281,14 @@
               "aetheriumscythe.activeitem.json": 4,
               "ancientscythe.activeitem.json": 2,
               "cutescythe.activeitem.json": 3,
-              "densiniumscythe.activeitem.json": 2,
+              "densiniumscythe.activeitem.json": 1,
               "fuatropusscythe.activeitem.json": 2,
               "fubonescythe.activeitem.json": 2,
               "fucultistscythe.activeitem.json": 2,
               "goldscythe.activeitem.json": 2,
               "honeyscythe.activeitem.json": 2,
               "ironscythe.activeitem.json": 2,
-              "irradiumscythe.activeitem.json": 2,
+              "irradiumscythe.activeitem.json": 1,
               "kirhosscythe.activeitem.json": 2,
               "lunariscythe.activeitem.json": 2,
               "penumbralscythe.activeitem.json": 2,
@@ -4318,12 +4318,12 @@
               "commonshortspear.activeitem.json": 1,
               "coreshortspear.activeitem.json": 2,
               "cuteshortspear.activeitem.json": 2,
-              "densiniumshortspear.activeitem.json": 2,
+              "densiniumshortspear.activeitem.json": 1,
               "durasteelshortspear.activeitem.json": 1,
               "fuatropusshortspear.activeitem.json": 1,
               "fucultistshortspear.activeitem.json": 2,
               "ironshortspear.activeitem.json": 1,
-              "irradiumshortspear.activeitem.json": 2,
+              "irradiumshortspear.activeitem.json": 1,
               "lunarishortspear.activeitem.json": 2,
               "penumbriteshortspear.activeitem.json": 2,
               "quietusshortspear.activeitem.json": 2,
@@ -4333,7 +4333,7 @@
               "telebriumshortspear.activeitem.json": 2,
               "thelusshortspear.activeitem.json": 2,
               "titaniumshortspear.activeitem.json": 1,
-              "tritaniumshortspear.activeitem.json": 2,
+              "tritaniumshortspear.activeitem.json": 1,
               "tungstenshortspear.activeitem.json": 1,
               "uncommonshortspear.activeitem.json": 1,
               "xithriciteshortspear.activeitem.json": 2,
@@ -4358,7 +4358,7 @@
               "dblade": {
                 "dblade.activeitem.json": 1
               },
-              "densiniumshortsword.activeitem.json": 2,
+              "densiniumshortsword.activeitem.json": 1,
               "diamondblade.activeitem.json": 2,
               "effigiumshortsword.activeitem.json": 1,
               "elderblade.activeitem.json": 2,
@@ -4376,7 +4376,7 @@
               "heliosblade.activeitem.json": 2,
               "hellfire1hand.activeitem.json": 2,
               "hylotllesserscion.activeitem.json": 2,
-              "irradiumblade.activeitem.json": 2,
+              "irradiumblade.activeitem.json": 1,
               "isogenshortsword.activeitem.json": 2,
               "moltenblade.activeitem.json": 2,
               "murdermachete.activeitem.json": 2,
@@ -4458,7 +4458,7 @@
               "hellfirespear.activeitem.json": 2,
               "injector.activeitem.json": 1,
               "injectorbio.activeitem.json": 1,
-              "irradiumspear.activeitem.json": 2,
+              "irradiumspear.activeitem.json": 1,
               "isogenspear.activeitem.json": 2,
               "kirhosispear.activeitem.json": 2,
               "lavaspear.activeitem.json": 3,
@@ -4482,7 +4482,7 @@
               "stonespear.activeitem.json": 2,
               "telebriumspear.activeitem.json": 2,
               "tristab.activeitem.json": 1,
-              "tritaniumspear.activeitem.json": 2,
+              "tritaniumspear.activeitem.json": 1,
               "uraniumspear.activeitem.json": 2,
               "wraithwind.activeitem.json": 2,
               "xithricitespear.activeitem.json": 2,
@@ -16548,7 +16548,7 @@
         },
         "fu_liquidmixer": {
           "fu_liquidmixer.config.json": 2,
-          "fu_liquidmixer.object.json": 2
+          "fu_liquidmixer.object.json": 1
         },
         "fu_nocturnarray": {
           "fu_nocturnarray.object.json": 2
@@ -20336,6 +20336,50 @@
           "bamboosofa.object.json": 2,
           "bambootable.object.json": 8
         },
+        "cloud": {
+          "cloudbed": {
+            "cloudbed.object.json": 0
+          },
+          "cloudchest": {
+            "cloudchest.object.json": 0
+          },
+          "cloudchestlarge": {
+            "cloudchestlarge.object.json": 0
+          },
+          "clouddoor": {
+            "clouddoor.object.json": 0
+          },
+          "cloudendtable": {
+            "cloudendtable.object.json": 0
+          },
+          "cloudlight": {
+            "cloudlight.object.json": 0,
+            "wip_for_animated_light": {
+              "floatingcloudlight.object.json": 0
+            }
+          },
+          "cloudrainlight": {
+            "cloudrainlight.object.json": 0
+          },
+          "cloudtable": {
+            "cloudtable.object.json": 0
+          },
+          "cloudthunderlight": {
+            "cloudthunderlight.object.json": 0
+          },
+          "shared_cloudbookcase": {
+            "shared_cloudbookcase.json": 0
+          },
+          "shared_cloudchair": {
+            "shared_cloudchair.json": 0
+          },
+          "shared_cloudcouch": {
+            "shared_cloudcouch.json": 0
+          },
+          "shared_cloudstool": {
+            "shared_cloudstool.json": 0
+          }
+        },
         "cute": {
           "cutearmchair": {
             "cutearmchair2.object.json": 1
@@ -21425,8 +21469,8 @@
             "create_clothingfabricator3b.questtemplate.json": 4,
             "create_clothingfabricator3c.questtemplate.json": 4,
             "create_clothingfabricator3d.questtemplate.json": 4,
-            "create_clothingfabricator3e.questtemplate.json": 4,
-            "create_clothingfabricator4.questtemplate.json": 4,
+            "create_clothingfabricator3e.questtemplate.json": 3,
+            "create_clothingfabricator4.questtemplate.json": 3,
             "kevin_feedkhe.questtemplate.json": 4
           },
           "khe_stuff": {
@@ -21452,7 +21496,7 @@
             "create_methyliodide.questtemplate.json": 4,
             "create_plastic.questtemplate.json": 4,
             "create_wastewater.questtemplate.json": 4,
-            "fuquest_biochem.questtemplate.json": 3,
+            "fuquest_biochem.questtemplate.json": 2,
             "fuquest_dna.questtemplate.json": 3,
             "fuquest_mineral.questtemplate.json": 3
           },
