--- a/translations/texts/items/active/weapons/npc/swtjc_ewg_npcantimaterialrifle.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/swtjc_ewg_npcantimaterialrifle.activeitem.json
@@ -19,8 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "NPC的反物质步枪",
-      "Eng": "NPC Anti-Material Rifle"
+      "Eng": "NPC Anti-Materiel Rifle"
     }
   }
 ]
