--- a/translations/texts/items/active/weapons/ranged/sniperrifle/swtjc_ewg_rareantimaterialrifle.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/sniperrifle/swtjc_ewg_rareantimaterialrifle.activeitem.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "精良的反物质步枪",
-      "Eng": "Rare Anti-Material Rifle"
+      "Eng": "Rare Anti-Materiel Rifle"
     }
   }
 ]
