--- a/translations/texts/items/active/weapons/ranged/sniperrifle/swtjc_ewg_commonantimaterialrifle.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/sniperrifle/swtjc_ewg_commonantimaterialrifle.activeitem.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "普通的反物质步枪",
-      "Eng": "Common Anti-Material Rifle"
+      "Eng": "Common Anti-Materiel Rifle"
     }
   },
   {
