--- a/translations/texts/items/active/weapons/ranged/sniperrifle/swtjc_ewg_uncommonantimaterialrifle.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/sniperrifle/swtjc_ewg_uncommonantimaterialrifle.activeitem.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "优秀的反物质步枪",
-      "Eng": "Uncommon Anti-Material Rifle"
+      "Eng": "Uncommon Anti-Materiel Rifle"
     }
   }
 ]
