--- a/translations/texts/stats/effects/thorns/shared_t.statuseffect.json
+++ b/translations/texts/stats/effects/thorns/shared_t.statuseffect.json
@@ -4,6 +4,9 @@
     "Files": {
       "stats/effects/thorns/ghostburst.statuseffect": [
         "/label"
+      ],
+      "stats/effects/thorns/ghostburst_armorset.statuseffect": [
+        "/label"
       ]
     },
     "Texts": {
