--- a/translations/texts/monsters/farming/erchibudbaby/erchibudbaby.monstertype.json
+++ b/translations/texts/monsters/farming/erchibudbaby/erchibudbaby.monstertype.json
@@ -7,7 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "一只刚出生的Erchibud！它会吃月尘和其他来自月球的东西。",
+      "Chs": "一只刚出生的厄尔吉斯蓓蕾！它会吃月尘和其他来自月球的东西。",
       "Eng": "A newborn erchibud! It'll eat moondust and other lunar items."
     }
   },
@@ -19,7 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "Erchibud幼崽",
+      "Chs": "厄尔吉斯蓓蕾幼崽",
       "Eng": "Erchibud Baby"
     }
   }
