--- a/translations/texts/monsters/skills/ranged/shared_Attack.monsterskill.json
+++ b/translations/texts/monsters/skills/ranged/shared_Attack.monsterskill.json
@@ -2,46 +2,16 @@
   {
     "DeniedAlternatives": [],
     "Files": {
-      "monsters/skills/ranged/slimeGooClusterAttack.monsterskill": [
+      "monsters/skills/ranged/targolemattack.monsterskill": [
         "/label"
       ],
-      "monsters/skills/ranged/toxicgolemAttack.monsterskill": [
+      "monsters/skills/ranged/targolembreathattack.monsterskill": [
         "/label"
       ]
     },
     "Texts": {
-      "Chs": "*软泥喷射*",
-      "Eng": "BIO SPEW"
-    }
-  },
-  {
-    "DeniedAlternatives": [],
-    "Files": {
-      "monsters/skills/ranged/robotIonAttack.monsterskill": [
-        "/label"
-      ],
-      "monsters/skills/ranged/robotZapAttack.monsterskill": [
-        "/label"
-      ]
-    },
-    "Texts": {
-      "Chs": "*离子喷射*",
-      "Eng": "Ion Burst"
-    }
-  },
-  {
-    "DeniedAlternatives": [],
-    "Files": {
-      "monsters/skills/ranged/magmablast2Attack.monsterskill": [
-        "/label"
-      ],
-      "monsters/skills/ranged/magmablastAttack.monsterskill": [
-        "/label"
-      ]
-    },
-    "Texts": {
-      "Chs": "*岩浆喷射*",
-      "Eng": "MAGMA BURST"
+      "Chs": "*焦油喷射*",
+      "Eng": "TAR SPEW"
     }
   }
 ]
