耳廓狐文档汉化与修复问题
1. 修复了自己上次汉化留下的bug（我是傻逼）
2. 重新汉化了耳廓狐相关的文档（原来的机翻味太冲了）
3. 修了其他人翻译的一些小bug
4. 其他零碎的修改和润色

--- a/translations/texts/codex/dungeons/apexunderwaterlabs3.codex.json
+++ b/translations/texts/codex/dungeons/apexunderwaterlabs3.codex.json
@@ -43,7 +43,7 @@
       ]
     },
     "Texts": {
-      "Chs": "这标志着一个巨大的成功，因为受试者是三次烹饪游戏节目“大猿的厨房”的冠军,。根据我们最新的公式，只有不到0.1%的受试者能够辨别出替代品。",
+      "Chs": "这标志着一个巨大的成功，因为受试者是三次烹饪游戏节目“老大猿厨房”的冠军,。根据我们最新的公式，只有不到0.1%的受试者能够辨别出替代品。",
       "Eng": "This marks a sounding success as the subject was a three-time winner of the cooking game show, 'Big Ape's Kitchen'. As of our latest formulation, less than 0.1% of subjects were able to discern the substitute."
     }
   }
