--- a/translations/texts/codex/fenerox/fenerox18.codex.json
+++ b/translations/texts/codex/fenerox/fenerox18.codex.json
@@ -7,7 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "此外，如果金属人存在... 为什么不是先进的？ 应该是超人，但仍然使用铁制武器。 即使是耳廓狐也经历了4代变成了钢铁！ 金属人如何拥有飞船和太空跳跃？金属人能当宠物吗？对于干净的洞穴来说很有用，因为它们从不睡觉。",
+      "Chs": "此外，如果金属人存在... 为什么他们技术落后？ 他们应该是超人，但还用铁制武器。 哪怕是耳廓狐在4代之后也用了钢！ 金属人怎么造出飞船学会跃迁的？金属人能当宠物吗？清理洞穴很有用，因为它们不睡觉。",
       "Eng": "Also, if metal people exist...why is not advanced? Should be super-people, but still using iron weapons. Even Fenerox changed to steel past 4 generations! How is metal-men having ships and space jump? Can metal-men be pets? Would be useful for clean burrows, since never sleeping."
     }
   },
@@ -31,7 +31,7 @@
       ]
     },
     "Texts": {
-      "Chs": "遇到了不可能的事。会说话的金属。数组人说，其他人制造了金属人只是金属人不记得。 我们有很多人在思考这个问题，并且想知道：金属人是如何生孩子的？没有肉体，没有卵子，没有性？ 婴儿在哪里？ 如何生下更多？",
+      "Chs": "遇到了不可能的事。会说话的金属。鼠族人说，其他人制造了金属人，而金属人却不记得了。我们对此想了很多，也很好奇： 金属人是如何制造婴儿的？没有肉体，没有卵子，没有性生活？婴儿在哪里？怎么生更多的婴儿？",
       "Eng": "Met impossible thing. Metal that talks. Kirhos said other people made metal-people and metal people just not remembering. We have many thinks about this, and are wonder: How is metal men baby-making? No flesh parts, no eggs, no sex? Where is babies? How is making more?"
     }
   },
