--- a/translations/texts/codex/fenerox/fenerox3.codex.json
+++ b/translations/texts/codex/fenerox/fenerox3.codex.json
@@ -31,7 +31,7 @@
       ]
     },
     "Texts": {
-      "Chs": "我们已经试图创造适合他们修改版语言，他们可以使用至少近似元音和辅音的发音。 然而，尽管如此，他们似乎没有什么能力写下这门语言。他们更喜欢用手势而不是标志",
+      "Chs": "我们已经试图创造适合他们修改版语言，他们可以使用至少近似元音和辅音的发音。 然而，尽管如此，他们似乎没有什么能力写下这门语言。他们更喜欢用手势而不是符号",
       "Eng": "We've attempted to create a modified version that they can use to at least approximate the vowel and consonant sounds. Despite all of this, however, they appear to have very little capability for writing the language down. They prefer to use hand gestures to 'sign'"
     }
   },
@@ -43,7 +43,7 @@
       ]
     },
     "Texts": {
-      "Chs": "有人甚至提到，等他学会写字的时候，他已经老了，头发也白了，因为太无聊了，他花了太长时间才弄明白。",
+      "Chs": "因为写字太枯燥，而且要花很长时间才能弄明白。",
       "Eng": "it was too boring and took too long to figure out."
     }
   },
@@ -55,7 +55,7 @@
       ]
     },
     "Texts": {
-      "Chs": "他们说话的时候，他们的语言，和任何数量的教他们的信都会遇到怀疑或烦恼。他们动作很快，但是他们写作(按照他们的说法)花的时间也太长了。",
+      "Chs": "他们边说边写，无论教他们多少字母，都会引起他们的怀疑或恼怒。他们的动作非常敏捷，而写字（据他们说）则需要太长的时间。有一个孩子甚至说，等他学会写字的时候，他已经是白发苍苍的老人了，",
       "Eng": "their words as they speak, and any amount of teaching them letters is met with doubt or annoyance. They move very swiftly, and writing (according to them) takes entirely too long. One even mentioned that he would be old and grey by the time he learned to write, because"
     }
   }
