--- a/translations/texts/codex/fenerox/fenerox6.codex.json
+++ b/translations/texts/codex/fenerox/fenerox6.codex.json
@@ -7,7 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "但并不意味着不喜欢。友好的，因为猎人。竞争是激烈的，而且有很好的乐趣。我们竞争，看谁是更好的猎人。",
+      "Chs": "但并不意味着不喜欢。友好，因为是猎人。竞争很激烈，也很有趣。我们竞争，看看谁是更好的猎人。",
       "Eng": "But is not mean dislike. Friendly, because hunters. Compete is keen, and makes for good fun. We compete and see who better hunter is."
     }
   },
