--- a/translations/texts/codex/fenerox/fenerox8.codex.json
+++ b/translations/texts/codex/fenerox/fenerox8.codex.json
@@ -31,7 +31,7 @@
       ]
     },
     "Texts": {
-      "Chs": "大多数时候，鲛人让人害怕。尽量避免，因为他们会说话，当他们说话的时候，他们的三只眼睛会看着。有没有被三只眼睛看过？不是吗？总是吓得发抖。此外，眼睛并不真正像哺乳动物的眼睛一样正常地眨眼睛。取而代之的是灵魂的空虚和恐惧。避免！与人都喜欢到海里去，所以很容易。",
+      "Chs": "大多数时候，鲛人让人害怕。尽量避免，因为他们会说话，当他们说话的时候，他们的三只眼睛会看着。有没有被三只眼睛看过？不是吗？总是吓得发抖。此外，眼睛并不真正像哺乳动物的眼睛一样正常地眨眼睛。取而代之的是灵魂的空虚和恐惧。避免！鱼人都喜欢到海里去，所以很容易。",
       "Eng": "Mostly, Hylotl scary. Avoid if can, because them will talk, and when them does their three eyes do watching. Ever been watch by *three* eyes? No? Shiver-scare always. Also, eyes not really blink normal like mammal eyes. Instead, is soul-empty and horror. Avoid! Fish men keep to seas, so is easy."
     }
   },
