--- a/translations/texts/codex/legacy_codex/greenfingercodexbigape.codex.json
+++ b/translations/texts/codex/legacy_codex/greenfingercodexbigape.codex.json
@@ -20,7 +20,7 @@
       ]
     },
     "Texts": {
-      "Chs": "绿手指的笔记: 大猿",
+      "Chs": "绿手指的笔记: 老大猿",
       "Eng": "Greenfinger's Notes: Big Ape"
     }
   },
