--- a/translations/texts/dialog/shared_n.config.json
+++ b/translations/texts/dialog/shared_n.config.json
@@ -2007,7 +2007,7 @@
       ]
     },
     "Texts": {
-      "Chs": "大猿究竟有多大？",
+      "Chs": "老大猿究竟有多大？",
       "Eng": "Just how big IS Big Ape?"
     }
   },
@@ -3072,7 +3072,7 @@
       ]
     },
     "Texts": {
-      "Chs": "“大猿人”是谁？",
+      "Chs": "“老大猿”是谁？",
       "Eng": "Who is \"Big Ape\"?"
     }
   },
