--- a/translations/texts/dialog/towndrunk.config.json
+++ b/translations/texts/dialog/towndrunk.config.json
@@ -400,7 +400,7 @@
       ]
     },
     "Texts": {
-      "Chs": "这是一只烤——*嗝*大猿人，还有它的榴弹发射器，呜呼！*打嗝儿*",
+      "Chs": "这是一只烤——*嗝*老大猿，还有它的榴弹发射器，呜呼！*打嗝儿*",
       "Eng": "Here's a toasht to *HIC*--ing Big Ape, and hish grenade launcher, woo hoo! *BURP*"
     }
   },
