--- a/translations/texts/monsters/bees/arcticbee/arcticbee.monstertype.json
+++ b/translations/texts/monsters/bees/arcticbee/arcticbee.monstertype.json
@@ -7,7 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "北极蜜蜂，能承受极低的温度。",
+      "Chs": "极地蜜蜂，能承受极低的温度。",
       "Eng": "An arctic bee, capable of withstanding extremely cold temperatures."
     }
   },
@@ -19,7 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "北极蜜蜂",
+      "Chs": "极地蜜蜂",
       "Eng": "Arctic Bee"
     }
   }
