--- a/translations/texts/npcs/apexslave.npctype.json
+++ b/translations/texts/npcs/apexslave.npctype.json
@@ -104,7 +104,7 @@
       ]
     },
     "Texts": {
-      "Chs": "我永远躲不掉大猿人的目光。",
+      "Chs": "我永远躲不掉老大猿的目光。",
       "Eng": "I'll never escape the gaze of Big Ape."
     }
   },
