--- a/translations/texts/npcs/apexslaver.npctype.json
+++ b/translations/texts/npcs/apexslaver.npctype.json
@@ -43,7 +43,7 @@
       ]
     },
     "Texts": {
-      "Chs": "大猿人正在看着我们，陌生人。",
+      "Chs": "老大猿正在看着我们，陌生人。",
       "Eng": "Big Ape is watching us all, stranger."
     }
   },
@@ -55,7 +55,7 @@
       ]
     },
     "Texts": {
-      "Chs": "大猿人将会让我们获得自由，陌生人。",
+      "Chs": "老大猿将会让我们获得自由，陌生人。",
       "Eng": "Big Ape will free us all, stranger."
     }
   },
@@ -67,7 +67,7 @@
       ]
     },
     "Texts": {
-      "Chs": "即使现在，我还是能够听到大猿人...的声音。",
+      "Chs": "即使现在，我还是能够听到老大猿...的声音。",
       "Eng": "Big Ape... I hear him, even now."
     }
   },
@@ -248,7 +248,7 @@
       ]
     },
     "Texts": {
-      "Chs": "难以置信，你竟然逃离了大猿人的监视。",
+      "Chs": "难以置信，你竟然逃离了老大猿的监视。",
       "Eng": "You surely do not believe you've escaped Big Ape's gaze."
     }
   },
