--- a/translations/texts/npcs/crew/crewmemberfuhunter.npctype.json
+++ b/translations/texts/npcs/crew/crewmemberfuhunter.npctype.json
@@ -332,7 +332,7 @@
       ]
     },
     "Texts": {
-      "Chs": "如果我成为你的船员，你是不是能保护我不受大猿人的奴役？",
+      "Chs": "如果我成为你的船员，你是不是能保护我不受老大猿的奴役？",
       "Eng": "If I join your crew, can you protect me from Big Ape?"
     }
   },
