--- a/translations/texts/npcs/infiltration/infiltrationelite.npctype.json
+++ b/translations/texts/npcs/infiltration/infiltrationelite.npctype.json
@@ -19,7 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "反抗大猿是错误的行为！",
+      "Chs": "反抗老大猿是错误的行为！",
       "Eng": "Opposing Big Ape is a mistake!"
     }
   },
