--- a/translations/texts/radiomessages/fu_madness.radiomessages.json
+++ b/translations/texts/radiomessages/fu_madness.radiomessages.json
@@ -187,7 +187,7 @@
       ]
     },
     "Texts": {
-      "Chs": "你已经恢复了一些你失去的精神稳态。",
+      "Chs": "你已经恢复了一些你失去的精神稳定性。",
       "Eng": "You have recovered some of your lost mental stability."
     }
   },
