--- a/translations/texts/stagehands/mission/glitchmissionmanager.stagehand.json
+++ b/translations/texts/stagehands/mission/glitchmissionmanager.stagehand.json
@@ -7,7 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "激动。我们被另一波围攻了！他们派出了更多的步兵和更多的弓箭手，而且...不！他们在天空！那些紫色的疯子们已经飞了起来！",
+      "Chs": "激动。我们被另一波围攻了！他们派出了更多的步兵和更多的弓箭手，而且...不！他们在空中！那些紫色的疯子们已经飞了起来！",
       "Eng": "Agitated. We are besieged by another wave! They've sent more infantry, and more archers, and... No! They're in the skies! Those purple curs have taken to the air!"
     }
   },
