--- a/translations/texts/codex/fenerox/fenerox1.codex.json
+++ b/translations/texts/codex/fenerox/fenerox1.codex.json
@@ -7,7 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "这个特殊的耳廓狐群体是如何来到这里的还不得而知，但是他们显示出了一种超越他们在其他世界的同族的技术和语言的能力。这已经给了他们一个领先的开始，我们估计他们无论如何都将在200年里达到自己的星球。我们将派遣一艘飞船在8个太阳周期内帮助他们。 样我们的贸易商就有时间准备足够的资源向他们提供服务。 希望他们愿意交易他们有价值的三相，因为其将会是价值非凡的，能为卡西尼方舟舰队制造一个新的超光速驱动器产业链。",
+      "Chs": "这个特殊的耳廓狐群体是如何来到这里的还不得而知，但是他们显示出了一种超越他们在其他世界的同族的技术和语言的能力。这已经给了他们一个领先的开始，我们估计他们无论如何都将在200年里达到自己的星球。我们将派遣一艘飞船在8个太阳周期内帮助他们。 样我们的贸易商就有时间准备足够的资源向他们提供服务。 希望他们愿意交易他们有价值的三相合金，因为它的确价值不菲，能为卡西尼方舟舰队制造一个新的超光速驱动器产业链。",
       "Eng": "How this particular group of Fenerox came to be here is unknown, but they show a capacity above and beyond their kin found on other worlds for technology and language. This has given them a head-start already, and we estimate they will have reached the stars on their own within 200 years anyhow. We will send a ship to help them along in 8 solar cycles. This should give our traders time to prepare sufficient resources to offer them. Hopefully they will be willing to trade their valuable Tritanium, as it will prove exceptionally valuable in fashioning a new line of FTL drives for Ark Fleet Cassini."
     }
   },
