--- a/translations/texts/codex/fenerox/fenerox10.codex.json
+++ b/translations/texts/codex/fenerox/fenerox10.codex.json
@@ -55,7 +55,7 @@
       ]
     },
     "Texts": {
-      "Chs": "人类仍然相当有趣，尽管肌肉和牙齿显示为快乐。人类通常对人友善。其中一个说我们作为人是“可爱”的。不知道这是什么意思，但是假设是尊重标志。然后他抚摸我的下巴。我喜欢下巴下面的宠爱。但是为什么人类要和我交配呢？ 想要和外星物种生孩子吗？人类是这样做的吗？ 为什么？",
+      "Chs": "人类仍然相当有趣，尽管肌肉和牙齿显示为快乐。人类通常对人友善。其中一个说我们作为人是“可爱”的。但我认为这是尊重的表现。然后他抚摸我的下巴。我喜欢摸下巴。但为什么人类要对我进行交配仪式呢？是想和外来物种生孩子吗？人类会这样做吗？为什么？",
       "Eng": "Humans still quite interesting, despite muscles and teeth-display for happy. Humans generally treat nice. One said we as people is 'cute'. Unsure what this means, but assume is respect sign. He then pet me under chin. I like pets under chin. But why is human attempt mating ritual with me? Is wanting baby-make with foreign species? Is human do this? Why?"
     }
   }
