--- a/translations/texts/codex/fenerox/fenerox13.codex.json
+++ b/translations/texts/codex/fenerox/fenerox13.codex.json
@@ -19,7 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "今天第一次见面，吐人。是的，没错。有说话部分并在思考的粘糊糊的呕吐物。 感觉？ 没有。但这种情况还是会发生。鼠族人没有告诉我们有会说话的呕吐物。 我们第一次遇到的新种族并不关心味道。没人吃呕吐物。不是食物。",
+      "Chs": "今天第一次见面，呕吐物人。是的，没错。有说话部分并会思考的粘糊糊的呕吐物。 感觉？ 没有。但还是会思考。鼠族人没有告诉我们有会说话的呕吐物。 我们第一次遇到我们不关心他们味道的新种族。没人吃呕吐物。不是食物。",
       "Eng": "Met today for first time, puke-person. Yes, reading that right. Slimey, blobby puke that has talking parts and is thinking. Sense? None. But still happens. Kirhos not told us there was talking vomit. First time us is meeting new races that not wonder about flavor. No one eat vomit. Is not food."
     }
   },
@@ -31,7 +31,7 @@
       ]
     },
     "Texts": {
-      "Chs": "呕吐的人？",
+      "Chs": "呕吐物人？",
       "Eng": "Puke people?"
     }
   }
