--- a/translations/texts/codex/fenerox/fenerox16.codex.json
+++ b/translations/texts/codex/fenerox/fenerox16.codex.json
@@ -7,7 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "在家里，水晶总是锋利的刀刃，而且不太灵巧，因为没有生命。但蜥蜴人有块水晶，还是在说话、呼吸和思考。鼠族人做了什么？不确定。我会问。不是一个可怕的人，但是我们一点也不怀疑是否美味。蜥蜴不好吃，即使挨饿。毒肉。也可能是因为蜥蜴的肉类有毒。",
+      "Chs": "在家里，水晶总有锋利的边，而且不太灵巧，因为没有生命。但蜥蜴人有块水晶，而且还会说话、呼吸和思考。是鼠人做的吗？不确定。我会问。不是一个可怕的人，但是我们一点也不怀疑他们的味道。蜥蜴不好吃，饿死也不好吃。毒肉。也可能是因为蜥蜴的肉类有毒。",
       "Eng": "At home, crystals is always sharp edges, and not very smart because unalive. But lizard-people have pieces be crystal and still is talk and breathe and think. Did Kirhos make? Unsure. Will ask. Not a scary people, but we not wonder at all if are tasty. Lizards not tasty, even if starving. Poison meat. Elduukhar also probably poison meat because lizards."
     }
   },
@@ -31,7 +31,7 @@
       ]
     },
     "Texts": {
-      "Chs": "遇见里面有水晶的有思想的蜥蜴。他们在呼吸... 火焰？有点热。也是有翅膀的，但好像不在乎飞翔。如果不能飞，为什么还有翅膀？没什么关系。最令人好奇的是晶体是如何形成的。",
+      "Chs": "遇见了体内有水晶的思考蜥蜴。它们在呼吸......火？是热的。它们还有翅膀，但似乎不喜欢飞。如果不会飞，为什么会有翅膀？这并不重要。最让人好奇的是晶体是如何形成的。",
       "Eng": "Meeting thinking lizards with crystals inside. Them is breathing...fire? Is heat-ish. Also is having wings, but not seem to care to fly. Why is have wings if not fly? Not matter much. Curious most is how crystals shaped to do things."
     }
   },
