--- a/translations/texts/codex/fenerox/fenerox2.codex.json
+++ b/translations/texts/codex/fenerox/fenerox2.codex.json
@@ -19,7 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "混乱是以后才会发生的。问我关于艾克尼的事？ 我们不知道。多放些石头。多买些蝴蝶结。更简单。他们教我们用他们的语言说和写，我们应该学会这样做。我们学习。是困难的，许多新的形状和声音。喜欢用古老的方式来表达。",
+      "Chs": "混乱是以后才会发生的。问我关于艾克尼的事？ 我们不知道。多放些石头。多买些弓。更简单。他们教我们用他们的语言说和写，说是我们应该学会的“星际标准语”。我们学习。是困难的，许多新的形状和声音。我们喜欢用古老的方式来表达。",
       "Eng": "Confusion is happen later. Asking about eekonimy? Us not know. Give more rocks. Get more bows. Easier. Them is teaching speak and write in their language, says is 'Galaktig Standurd Tung' and us should learn to do. We learn. Is hard, many new shapes and sounds. Prefer using old ways for speak."
     }
   },
