--- a/translations/texts/codex/legacy_codex/fuapexplea.codex.json
+++ b/translations/texts/codex/legacy_codex/fuapexplea.codex.json
@@ -7,7 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "这是一份希望共同抵抗大猿的请求。",
+      "Chs": "这是一份希望共同抵抗老大猿的请求。",
       "Eng": "A plea from the Resistance"
     }
   },
@@ -19,7 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "现在，勇敢的朋友，快离开这里，把我们目前面临的危急情况带给这个宇宙里每一位爱好和平的生命，并寻求他们的帮助！希望你能及时与那些赶来援助的朋友阻止大猿，粉碎他的统治！对了，在别浪费燃料的前提，顺路带回一点香蕉。",
+      "Chs": "现在，勇敢的朋友，快离开这里，把我们目前面临的危急情况带给这个宇宙里每一位爱好和平的生命，并寻求他们的帮助！希望你能及时与那些赶来援助的朋友阻止老大猿，粉碎他的统治！对了，在别浪费燃料的前提，顺路带回一点香蕉。",
       "Eng": "Go now, brave Apex. Go, spread the plight of our people to the universe at large. Call for help! Return with an army so that we may crush Big Ape once and for all! And pick up some bananas on your way back. Just be sure not to run out of fuel."
     }
   },
