--- a/translations/texts/codex/legacy_codex/fuhca1.codex.json
+++ b/translations/texts/codex/legacy_codex/fuhca1.codex.json
@@ -31,7 +31,7 @@
       ]
     },
     "Texts": {
-      "Chs": "这一切都很令人兴奋。大猿的观众！绿手指告诉我，他听说了我的丰功伟绩，想向我请教一下。我的意思是，天哪，我听说过大猿采集猿人大脑的谣言，但我不认为这意味着什么。",
+      "Chs": "这一切都很令人兴奋。老大猿的观众！绿手指告诉我，他听说了我的丰功伟绩，想向我请教一下。我的意思是，天哪，我听说过大猿采集猿人大脑的谣言，但我不认为这意味着什么。",
       "Eng": "It's all very exciting. An audience with Big Ape! Greenfinger told me he's heard about my exploits, and would like to pick my brain. I mean gosh, I've heard rumours about Big Ape picking peoples' brains, but I don't think it means that this time."
     }
   }
